--- a/20250811.md
+++ b/20250811.md
@@ -1,39 +1,46 @@
 ### 大東亞戰爭のあらまし
 
-**明治43年 1910年** 日韓併合
+#### 明治43年 1910年
+日韓併合
 
-**明治44年 1911年** 辛亥革命 清朝の滅亡  
-                      蒋介石：南京に国民政府を立て 北京政府を討伐するため北へ  
-                      張作霖：北京政府
+#### 明治44年 1911年
+辛亥革命 清朝の滅亡  
+- 蒋介石：南京に国民政府を立て 北京政府を討伐するため北へ  
+- 張作霖：北京政府
 
 ---
 
-**昭和1年 1926年** 裕仁(ひろひと)親王が即位
+#### 昭和1年 1926年
+裕仁(ひろひと)親王が即位
 
-**昭和3年 1928年** 張作霖爆殺事件
+#### 昭和3年 1928年
+張作霖爆殺事件
 
-**昭和4年 1929年** ニューヨーク証券取引所 株価大暴落 その後十年程 世界恐慌
+#### 昭和4年 1929年
+ニューヨーク証券取引所 株価大暴落 その後十年程 世界恐慌
 
-**昭和5年 1930年** ロンドン海軍軍縮条約に調印
+#### 昭和5年 1930年
+ロンドン海軍軍縮条約に調印
 
-**昭和6年 1931年** 柳条湖事件 (満洲事變) 20万(國民革命軍) vs 1万(関東軍)
-                  五ヵ月後 哈爾賓占領
+#### 昭和6年 1931年
+柳条湖事件 (満洲事變) 20万(國民革命軍) vs 1万(関東軍)  
+五ヵ月後 哈爾賓占領
 
-**昭和7年 1932年**   
+#### 昭和7年 1932年   
 - 満洲國建國
 - 五・一五事件 (犬養毅首相暗殺) 斎藤実(まこと)内閣 満洲國承認
 - 國際連盟 リットン調査團派遣
 
-**昭和8年 1933年**  
+#### 昭和8年 1933年  
 - 國際連盟を脱退  
 - 塘沽停戰協定  
 - ニューディール政策 (フランクリン・ルーズベルト米大統領)  
 
-**昭和11年1936年**  
+#### 昭和11年1936年  
 - 二・二六事件 昭和天皇「速やかに暴徒を鎮圧せよ」  
 - 西安事件(蒋介石拉致監禁事件)
 
-**昭和12年1937年**   
+#### 昭和12年1937年   
 - 7月7日 盧溝橋事件(北京郊外)  
 - 7月29日 通州事件 日本人居留民223名虐殺  
 - 華北への出兵を決定(近衛文麿首相)  
@@ -41,13 +48,14 @@
 - 9月 國民黨(蒋介石)と共産黨(毛沢東)が「抗日」で團結  
 - 12月 南京陥落  
 
-**昭和13年1938年** 國家総動員法 (近衛文麿内閣)
+#### 昭和13年1938年
+國家総動員法 (近衛文麿内閣)
 
-**昭和14年1939年**  
+#### 昭和14年1939年  
 - ドイツ ポーランド侵攻 英・仏が独に宣戰布告 第二次世界大戰  
 - アメリカ 日米通商航海条約の破棄
 
-**昭和15年1940年**  
+#### 昭和15年1940年  
 - 大政翼賛會發足 (第二次近衛内閣)
 - 紀元2600年祝賀行事
 - 零式艦上戦闘機製造
@@ -55,7 +63,7 @@
 - 日独伊三國同盟(樞軸國に加わる)
 - アメリカ 日本に對し鉄の禁輸
 
-**昭和16年1941年**  
+#### 昭和16年1941年  
 - 日ソ中立条約
 - ドイツ ソ連へ侵攻(独ソ不可侵条約を破る)
 - 松岡洋石外務大臣 ソ連へ攻め込む北進論を主張するも近衛により却下
@@ -85,7 +93,7 @@
 - 12月10日日本の陸攻隊が戦艦プリンス・オブ・ウェールズ及び巡洋艦レパルスを撃沈  
           當時航行中の戦艦を航空攻撃で沈めるのは不可能と考へられてゐた
 
-**昭和17年 (1942)**  
+#### 昭和17年 (1942)  
 - 2月15日 イギリス東洋艦隊の本拠地 シンガポールを占領
 - フィリピン(アメリカ)
 - ジャワ・スマトラ(オランダ)
@@ -95,7 +103,7 @@
      パイロットの大半を失ふ痛手
 - 8月7日 米軍ガダルカナル島上陸作戰開始
 
-**昭和18年 (1943)**
+#### 昭和18年 (1943)
 - 学徒出陣(大學生も徴兵の對象となる)
 - 勤勞動員(25歳未満の未婚の女子・中學生以上の生徒)
 - 2月 日本軍ガナルカナルより撤退  
@@ -104,7 +112,7 @@
       「撤退」を「転進」 「全滅」を「玉砕」
 -  ドイツがスターリングラード戰でソ連に敗北
 
-**昭和19年 (1944)**
+#### 昭和19年 (1944)
 - 朝鮮人・台湾人が徴用工として賃金をもらひ働く
 - 6月 米軍マリアナ諸島のサイパン島上陸作戰開始  
       マリアナ諸島は日本の最重要地帯(マリアナが陥落すると日本本土の大半が  
@@ -112,7 +120,7 @@
 - 7月 サイパン陥落 日本軍約3萬人の兵士 約1萬人の民間人が戰死
 - 7月 東條内閣総辞職
 
-**昭和20年 (1945)**
+#### 昭和20年 (1945)
 - 2月 ヤルタ會談(アメリカ・イギリス・ソ連)  
       密約：ドイツ降伏から90日以内にソ連は對日參戰  
             南樺太と千島列島はソ連に引き渡される  
